# lipsync-papers

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  papers.csv  pyproject.toml  requirements-tts.txt  topics
.github/workflows/: fetch_papers.yml
papers/: README.md
papers/2020/: 2002.08700.md  2002.08742.md  2002.10137.md  2003.12957.md  2003.13840.md  2004.12992.md  2004.14569.md  2005.03201.md  2005.06402.md  2005.07074.md  2005.08606.md  2005.10954.md  2005.11769.md  2005.12318.md  2005.13616.md  2006.05888.md  2006.11610.md  2007.04134.md  2007.08547.md  2007.12553.md  2008.00620.md  2008.01652.md  2008.03592.md  2008.07191.md  2008.07783.md  2008.09586.md  2008.10010.md  2008.13222.md  2009.05784.md  2010.04556.md  2010.13017.md  2011.01114.md  2011.04359.md  2011.04439.md  2011.10688.md  2011.10727.md  2011.14334.md  2011.15126.md  2012.04012.md  2012.07304.md  (+3 more)
papers/2021/: 2101.03149.md  2101.05975.md  2101.06268.md  2101.10808.md  2101.12059.md  2102.03984.md  2102.04144.md  2102.09737.md  2103.01463.md  2103.03927.md  2103.10094.md  2103.11078.md  2104.02775.md  2104.02850.md  2104.03117.md  2104.07452.md  2104.07995.md  2104.09770.md  2104.09946.md  2104.11116.md  2104.12051.md  2104.14557.md  2104.14631.md  (+29 more)
scripts/: calibrate_semantic_threshold.py  convert_papers.py  fetch_papers.py  generate_digest.py  tts_papers.py
tests/: conftest.py  test_citations.py  test_fetch_filtering.py  test_indexes.py  test_latex_to_md.py  test_orchestrator.py  test_output.py  test_readme_table.py  test_remediation.py  test_sources.py
(+1024 files in other folders)
